--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,8 @@
-name = "webabc-react"
-compatibility_date = "2024-01-01"
+name = "webabc"
+compatibility_date = "2024-05-02"
 
-# Add your worker configuration here. For example:
-# [[kv_namespaces]]
-# binding = "MY_KV"
-# id = "your-kv-namespace-id"
+[pages]
+build_output_dir = "./dist"
+
+[build]
+command = "npm run build"
