--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,13 @@
 name = "webabc"
-compatibility_date = "2024-05-02"
+compatibility_date = "2025-10-12"
+main = "src/worker.ts"
 
-[pages]
-build_output_dir = "./dist"
 
-[build]
-command = "npm run build"
+[site]
+bucket = "./dist"
+
+#[pages]
+#build_output_dir = "./dist"
+
+#[build]
+#command = "npm run build"
